# tree-sitter-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tree-sitter-config.cmake
.github/workflows/: build.yml
include/tree_sitter/: langs.h
